--- a/src/main/webapp/WEB-INF/views/thymeleaf/error404.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/error404.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-
+<div th:replace="navbar :: navbar"></div>
 <div class="container text-center" style="min-height: 100vh;">
     <div class="animated-error">ERROR</div>
     <div style="width: 100%; max-width: 500px; margin: auto;">
