--- a/src/main/webapp/WEB-INF/views/thymeleaf/misEjercicios.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misEjercicios.html
@@ -19,29 +19,6 @@
 </head>
 <body>
     <div th:replace="navbar :: navbar"></div>
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-12">
-                <div class="list-group flex-row justify-content-center">
-                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
-                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
-                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
-                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
-                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action activo">CALENDARIO</a>
-                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
-                </div>
-            </div>
-        </div>
-
-        <div style="margin-left: 20px; padding: 10px;">
-            <p>
-                <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
-                <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis ejercicios
-            </p>
-        </div>
-
   <div class="container">
       <div class="row justify-content-center">
           <div class="col-md-8">
@@ -59,7 +36,7 @@
           </div>
       </div>
   </div>
-
+    <div th:replace="footer :: footer"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
