--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalles_alimento.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalles_alimento.html
@@ -16,6 +16,32 @@
 </head>
 <body>
 <div th:replace="navbar :: navbar"></div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="list-group flex-row">
+                <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action activo">ALIMENTOS</a>
+                <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="margin-left: 20px; padding: 10px;">
+    <p>
+        <span ><a th:href="@{/home}" style="color: green;">Home</a></span> >
+        <span><a th:href="@{/categoria_alimentos}" style="color: green;">Alimento</a></span> >
+        <span><a th:href="@{|/categorias/${categoriaId}|}" style="color: green;"> <span th:text="${categoriaNombre}" style="color: green;"></span></a></span> >
+        <span th:text="${alimento.nombre}" style="color: green;"></span>
+    </p>
+</div>
+
 <div class="container" style="min-height: 60vh;">
     <div class="row">
         <div class="col-md-6">
