--- a/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
@@ -9,6 +9,29 @@
 </head>
 <body>
 <div th:replace="navbar :: navbar"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="list-group flex-row">
+                <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
+                <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action activo">EN FORMA</a>
+                <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="margin-left: 20px; padding: 10px;">
+    <p>
+        <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+        <span><a th:href="@{/actividadesFisicas}" style="color: green;">Ejercicios</a></span> >
+        <span th:text="${ejercicio.nombre}"></span>
+    </p>
+</div>
 <div class="container mt-4 ejercicio_cuadro" style="min-height: 80vh;">
     <div class="row">
         <div class="col-md-6">
