--- a/src/main/webapp/WEB-INF/views/thymeleaf/categoria_alimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/categoria_alimentos.html
@@ -20,6 +20,27 @@
 <body>
     <div th:replace="navbar :: navbar"></div>
     <!--categorias-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="list-group flex-row">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action activo">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div style="margin-left: 20px; padding: 10px;">
+        <p>
+            <span ><a th:href="@{/home}" style="color: green;">Home</a></span> > Alimento
+        </p>
+    </div>
     <div class="container d-flex flex-row mt-4">
         <h2 class="text-center">Categorias de Alimentos</h2>
         <form class="d-flex ms-auto" role="search" th:action="@{/buscarCategoria}" method="get">
