--- a/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
@@ -21,11 +21,32 @@
     <div th:replace="navbar :: navbar"></div>
     <div class="container">
         <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="list-group flex-row justify-content-center">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action activo">CALENDARIO</a>
+                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+                </div>
+            </div>
+        </div>
+
+        <div style="margin-left: 20px; padding: 10px;">
+            <p>
+                <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+                <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis alimentos
+            </p>
+        </div>
+    <div class="container">
+        <div class="row justify-content-center">
             <div class="col-md-8">
               <h2>Alimentos consumidos el <span th:text="${fecha}"></span></h2>
                 <ul>
                     <li th:each="colacion : ${colaciones}">
-                        <a th:href="@{/alimentos/{id}(id=${colacion.alimentos.id}, from='diarioAlimentos')}"><span th:text="${colacion.alimentos.nombre}"></span> </a> - <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -<span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
+                        <a><span th:text="${colacion.alimentos.nombre}"></span> </a> - <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -<span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
 
                     </li>
                 </ul>
