--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetasFavoritas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetasFavoritas.html
@@ -15,7 +15,28 @@
 
 <div th:replace="navbar :: navbar"></div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="list-group flex-row">
+        <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+        <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
+        <a th:href="@{/recetas}" class="list-group-item list-group-item-action activo">RECETAS</a>
+        <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+        <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+        <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+        <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div style="margin-left: 20px; padding: 10px;">
+  <p>
+    <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+    <span><a th:href="@{/recetas}" style="color: green;">Recetas</a></span> > Recetas Favoritas
+  </p>
+</div>
 
 <div class="d-flex justify-content-center align-items-center">
   <div class="contenedor-principal-receta">
