--- a/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
@@ -2,13 +2,13 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Comunidad</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Publicaciones Comunidad</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,10 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-    <!--custom styles-->
     <style>
         .post-card {
-            max-width: 500px;
+            max-width: 720px;
             margin: 0 auto;
             border: 1px solid #ddd;
             border-radius: 10px;
@@ -46,16 +45,17 @@
             margin-top: 10px;
         }
     </style>
+
 </head>
 <body>
 
-    <!--header/nav-->
     <div th:replace="navbar :: navbar"></div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="list-group flex-row">
-                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action">MI FATLOSS</a>
                     <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
                     <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
                     <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
@@ -67,16 +67,15 @@
         </div>
     </div>
 
-    <div style="margin-left: 20px; padding: 10px;">
-        <p>
-            <span><a th:href="@{/home}" style="color: green;">Home</a></span> > Comunidad
-        </p>
+    <div class="ms-2 p-2">
+        <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > Comunidad</h6>
     </div>
 
     <div class="container my-5" style="min-height: 60vh;">
-
         <h2 class="text-center fw-bold mb-3">Publicaciones de la Comunidad</h2>
-
+        <div th:if="${#lists.isEmpty(publicaciones)}" class="container mx-3 my-3">
+            <h4 class="text-center text-warning fw-bold my-2">No ahi publicaciones disponibles.</h4>
+        </div> 
         <div th:each="publicacion : ${publicaciones}" class="post-card mb-4">
             <div class="post-header">
                  <img  th:src="@{'/img/' + ${publicacion.usuario.imagen}}" alt="avatar-perfil" width="50" height="50">
@@ -91,29 +90,22 @@
             <div class="post-content">
                 <p th:text="${publicacion.texto}"></p>
                 <div class="post-actions">
-                    <span th:if="${likes[publicacion.id]}">
-                        <form th:action="@{/quitarMeGusta}" method="post">
-                            <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
-                            <button type="submit" class="btn btn-warning" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Quitar Me gusta</button>
-                        </form>
-                    </span>
-                    <span th:unless="${likes[publicacion.id]}">
-                        <form th:action="@{/darMeGusta}" method="post">
-                            <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
-                            <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Dar Me gusta</button>
-                        </form>
-                    </span>
+                    <form th:action="@{/quitarMeGusta}" method="post" th:if="${likes[publicacion.id]}">
+                        <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
+                        <button type="submit" class="btn btn-warning" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Quitar Me gusta</button>
+                    </form>
+                    <form th:action="@{/darMeGusta}" method="post" th:unless="${likes[publicacion.id]}">
+                        <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
+                        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Dar Me gusta</button>
+                    </form>
                 </div>
             </div>
         </div>
-
         <div class="d-flex justify-content-end">
-            <a class="btn btn-dark" th:href="@{/subirPublicacion}">Subir Publicacion</a>
+            <a class="btn btn-success" th:href="@{/subirPublicacion}">Subir Publicacion</a>
         </div>
-
     </div>
 
-    <!--footer-->
     <div th:replace="footer :: footer"></div>
 
     <script>
@@ -124,6 +116,8 @@
             });
         });
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
