--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -9,7 +9,6 @@
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-    <!--solo me anduvo en el html si lo pueden solucionar para ponerlo en el archivo css-->
     <style>
         input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -28,21 +26,19 @@
 </head>
 <body>
 
-    <!--header-->
-    <nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
+    <nav class="navbar navbar-expand" style="background-color: #ffffff;">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{/inicio}">
-                <h1 class="display-3" style="color: #5FB92E; font-weight: bold;"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
+                <h1 class="display-3 fw-bold" style="color: #5FB92E;"><img th:src="@{/img/logo.png}" alt="logo" height="100px">   fatloss</h1>
             </a>
         </div>
     </nav>
 
-    <!--formulario-->
-    <div class="container my-5">
+    <div class="container my-5" style="min-height: 60vh;">
         <div class="row d-flex flex-column justify-content-center align-items-center">
-            <div class="col-sm-7 border border-1 rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+            <div class="col-md-8 border border-1 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
                 <form class="p-5" th:action="@{/enviarFormulario}" method="post" th:object="${usuario}">
-                    <h2 class="text-center text-white mb-3">Datos Personales</h2>
+                    <h2 class="text-center fw-bold mb-3">Formulario de Registro</h2>
                     <div class="form-floating mb-3">
                         <input class="form-control" th:field="*{nombre}" type="text" name="nombre" id="nombre" placeholder="Ingresar nombre" required>
                         <label for="nombre">Nombre</label>
@@ -89,31 +85,30 @@
                         </select>
                         <label for="nivelDeActividad">Nivel de Actividad Fisica</label>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center">
-                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                <input class="btn btn-outline-success" type="submit" name="enviar" id="enviar" value="Enviar">
-                            </div>
+                    <div class="row mb-3">
+                        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
+                            <input class="btn btn-success" type="submit" name="registrarse" id="registrarse" value="Registrarse">
                         </div>
-                        <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center">
-                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                <a class="btn btn-outline-success" th:href="@{/inicio}">Cancelar</a>
-                            </div>
+                        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
+                            <a class="btn btn-warning" th:href="@{/inicio}">Cancelar</a>
                         </div>  
                     </div>
-                    <div class="d-flex flex-column justify-content-center m-3">
-                        <div class="alert alert-danger alert-dismissible fade show" th:if="${error != null}">
+
+                    <div class="d-flex flex-column justify-content-center" th:if="${error != null}">
+                        <div class="alert alert-danger alert-dismissible fade show">
                             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                             <strong>Error: </strong><span th:text="${error}"></span>
                         </div>
                     </div>
+                
                 </form>
             </div>
         </div>
     </div>
 
-    <!--footer-->
     <div th:replace="footer :: footer"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
