--- a/src/main/webapp/WEB-INF/views/thymeleaf/formularioEditarPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formularioEditarPerfil.html
@@ -9,7 +9,6 @@
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,15 +26,33 @@
 </head>
 <body>
 
-    <!--header/nav-->
     <div th:replace="navbar :: navbar"></div>
 
-    <!--formulario-->
-    <div class="container my-5" style="min-height: 75vh;">
-        <h2 class="text-center fw-bold mb-3"> Editar Perfil</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="list-group flex-row">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ms-2 p-2">
+        <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > <a th:href="@{/perfilUsuario}" style="color: #5FB92E;">Mi perfil</a> > Editar Perfil</h6>
+    </div>
+
+    <div class="container my-5" style="min-height: 60vh;">
+        <h2 class="text-center fw-bold mb-3">Editar Perfil</h2>  
         <div class="row d-flex flex-column justify-content-center align-items-center">
-            <div class="col-md-6 border border-2 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
-                <form class="p-5" th:action="@{/procesarDatos}" method="post" th:object="${usuario}">      
+            <div class="col-md-8 border border-1 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+                <form class="p-5" th:action="@{/procesarDatos}" method="post" th:object="${usuario}"> 
                     <div class="form-floating mb-3">
                         <input class="form-control" th:field="*{nombre}" type="text" name="nombre" id="nombre" placeholder="Ingresar nombre" required>
                         <label for="nombre">Nombre</label>
@@ -80,22 +97,17 @@
                         </select>
                         <label for="nivelDeActividad">Nivel de Actividad Fisica</label>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
-                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                <input class="btn btn-success" type="submit" name="guardar" id="guardar" value="Guardar">
-                            </div>
+                            <input class="btn btn-success" type="submit" name="guardar" id="guardar" value="Guardar">
                         </div>
                         <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
-                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                <a class="btn btn-warning" th:href="@{/perfilUsuario}">Cancelar</a>
-                            </div>
+                            <a class="btn btn-warning" th:href="@{/perfilUsuario}">Cancelar</a>
                         </div>  
                     </div>
                     
-                    <!--errores-->
-                    <div class="d-flex flex-column justify-content-center m-3">
-                        <div class="alert alert-danger alert-dismissible fade show" th:if="${error != null}">
+                    <div class="d-flex flex-column justify-content-center" th:if="${error != null}">
+                        <div class="alert alert-danger alert-dismissible fade show">
                             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                             <strong>Error: </strong><span th:text="${error}"></span>
                         </div>
@@ -106,8 +118,9 @@
         </div>
     </div>
 
-    <!--footer-->
     <div th:replace="footer :: footer"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
