--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
@@ -9,7 +8,6 @@
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,16 +17,14 @@
 </head>
 <body>
 
-    <!--header-->
-    <nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
+    <nav class="navbar navbar-expand" style="background-color: #ffffff;">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{#}">
-                <h1 class="display-3" style="color: #5FB92E; font-weight: bold;"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
+                <h1 class="display-3 fw-bold" style="color: #5FB92E;"><img th:src="@{/img/logo.png}" alt="logo" height="100px">   fatloss</h1>
             </a>
         </div>
     </nav>
 
-    <!--imagenes-->
     <div class="carousel slide mt-2 mb-4" id="imagenes" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button class="active" type="button" data-bs-target="#imagenes" data-bs-slide-to="0" ></button>
@@ -66,45 +62,23 @@
         </button>
     </div>
     
-    <!--registro/iniciar-sesion-->
     <div class="container-fluid mb-5">
-        <h3 class="text-center mb-2" style="color: #5FB92E">Bienvenido a fatloss</h3>
-        <div class="row">    
-            <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center my-2">
+        <h3 class="text-center fw-bold mb-2" style="color: #5FB92E">Bienvenido a fatloss</h3>
+        <div class="row my-2">    
+            <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
                 <p>Comienza tu viaje hacia una vida mas saludable.</p>
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                    <a class="btn btn-outline-success" th:href="@{/formulario-registro}">Registrarse</a>
-                </div>
+                <a class="btn btn-success" th:href="@{/formulario-registro}">Registrarse</a>
             </div>
-            <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center my-2">
+            <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
                 <p>Vuelve al sendero de una vida mas saludable.</p>
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                    <a class="btn btn-outline-success" th:href="@{/iniciar-sesion}">Iniciar Sesion</a>
-                </div>
+                <a class="btn btn-success" th:href="@{/iniciar-sesion}">Iniciar Sesion</a>
             </div>
         </div>   
     </div>
 
-    <!--footer-->
-    <footer class="container-fluid mt-auto py-2">
-        <div class="row d-flex align-items-center" >
-            <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
-            justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
-                <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="140px">
-            </div>
-            <div class="col-sm-5 d-flex flex-column justify-content-star">
-                <h4>TP Taller Web I: fatloss</h4>
-                <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
-                <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
-            </div>
-            <div class="col-sm-5 d-flex flex-column justify-content-star">
-                <h5>Integrantes: </h5>
-                <p>Rodolfo Gutierrez - Gonzalo Flores</p>
-                <p>Milagros Chavez - Kevin Llombart</p>
-                <p>Joaquin Paiva</p>
-            </div>
-        </div>
-    </footer>
+    <footer th:replace="footer :: footer"></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
