--- a/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -9,7 +9,6 @@
     
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +18,7 @@
 
 </head>
 <body>
+
     <div th:replace="navbar :: navbar"></div>
 
     <div class="container">
@@ -37,34 +37,34 @@
         </div>
     </div>
 
-    <div style="margin-left: 20px; padding: 10px;">
-        <p>
-            <span><a th:href="@{/home}" style="color: green;">Home</a></span> > Notificaciones
-        </p>
+    <div class="ms-2 p-2">
+        <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > Notificaciones</h6>
     </div>
 
-    <!--notificaciones-->
     <div class="container my-5" style="min-height: 60vh;">
-        <h2 class="text-center text-dark">Mis Notificaciones</h2>
-        <div class="mt-4 p-5 text-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
-            <h3 class="text-white">Advertencia: </h3>
+        <h2 class="text-center fw-bold">Mis Notificaciones</h2>
+        <div class="mt-4 p-5 text-dark border border-1 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+            <h3 class="text-white fw-bold">Advertencia: </h3>
             <p>Queremos informarle que las notificaciones eliminadas no podran ser recuperadas. 
-            Estas notificaciones pueden contener informacion vital sobre tu progreso, recordatorios 
-            de comidas o consejos nutricionales.</p>
+            Estas notificaciones pueden contener informacion vital sobre tu progreso, recordatorios de comidas o consejos nutricionales.</p>
         </div>
         <div class="d-flex flex-column justify-content-center mx-5 my-3">
+            <div th:if="${#lists.isEmpty(notificaciones)}">
+                <h4 class="text-center text-warning fw-bold my-2">No tienes notificaciones disponibles.</h4>
+            </div> 
             <div class="alert alert-success alert-dismissible fade show" th:each="notificacion : ${notificaciones}">
                 <form th:action="@{/eliminarNotificacion}" method="post">
                     <input type="hidden" th:name="'idNotificacion'" th:value="${notificacion.id}">
                     <button type="submit" class="btn-close" data-bs-dismiss="alert"></button>
-                    <strong th:text="${notificacion.titulo}"></strong>: <span th:text="${notificacion.contenido}"></span>
+                    <strong th:text="${notificacion.titulo + ': '}"></strong><span th:text="${notificacion.contenido}"></span>
                 </form>
             </div>
         </div>
     </div>
 
-    <!--footer-->
     <div th:replace="footer :: footer"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
