--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Perfil</title>
+    <title>Perfil Usuario</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-
 
     <div th:replace="navbar :: navbar"></div>
 
@@ -38,31 +37,41 @@
         </div>
     </div>
 
-    <div style="margin-left: 20px; padding: 10px;">
-        <p>
-            <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
-            <span><a th:href="@{/comunidad}" style="color: green;">Comunidad</a></span> > Perfil de <span th:text="${usuarioComunidad.nombre}"></span>
-        </p>
+    <div class="ms-2 p-2">
+        <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > <a th:href="@{/comunidad}" style="color: #5FB92E">Comunidad</a> > Perfil de <span th:text="${usuarioComunidad.nombre}"></span></h6>
     </div>
+
     <div class="container my-5" style="min-height: 60vh;">
-        <h2 class="text-center text-dark" style="font-weight: bold;">Perfil de <span th:text="${usuarioComunidad.nombre}"></span></h2>
+        <h2 class="text-center fw-bold">Perfil de <span th:text="${usuarioComunidad.nombre}"></span></h2>
         <div class="row d-flex align-items-center">
             <div class="col-sm-4 d-flex flex-column justify-content-center my-3">
                 <img class="img-fluid" th:src="@{'/img/' + ${usuarioComunidad.imagen}}" alt="avatar-perfil">
             </div>
             <div class="col-sm-8">
-                <div class="card" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+                <div class="card border border-1 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
                     <div class="card-body">
-                        <h4 class="card-title text-dark fw-bold" th:text="${usuarioComunidad.email}"></h4>
-                        <p class="card-text text-dark fw-bold">Edad: <span th:text="${usuarioComunidad.edad}+' anios'"></span></p>
-                        <p class="card-text text-dark fw-bold">Genero: <span th:text="${usuarioComunidad.genero}"></span></p>
-                        <p class="card-text text-dark fw-bold">Altura: <span th:text="${usuarioComunidad.altura}+' cm'"></span></p>
-                        <p class="card-text text-dark fw-bold">Peso: <span th:text="${usuarioComunidad.peso}+' kg'"></span></p>
-                        <p class="card-text text-dark fw-bold">Peso Meta: <span th:text="${usuarioComunidad.metaAlcanzarPeso}+' kg'"></span></p>
-                        <p class="card-text text-dark fw-bold">Nivel de Actividad Fisica: <span th:text="${usuarioComunidad.nivelDeActividad}"></span></p>
-                        <span th:if="${follow != null}"><a class="btn btn-dark" th:href="@{/dejarDeSeguir/{id}(id=${usuarioComunidad.id})}">Siguiendo</a></span>
-                        <span th:if="${follow == null}"><a class="btn btn-dark" th:href="@{/seguir/{id}(id=${usuarioComunidad.id})}">Seguir</a></span>
-                        <a class="btn btn-dark" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                
+                        <h4 class="card-title fw-bold" th:text="${usuarioComunidad.email}"></h4>
+                        <p class="card-text fw-bold">Edad: <span th:text="${usuarioComunidad.edad}+' anios'"></span></p>
+                        <p class="card-text fw-bold">Genero: <span th:text="${usuarioComunidad.genero}"></span></p>
+                        <p class="card-text fw-bold">Altura: <span th:text="${usuarioComunidad.altura}+' cm'"></span></p>
+                        <p class="card-text fw-bold">Peso: <span th:text="${usuarioComunidad.peso}+' kg'"></span></p>
+                        <p class="card-text fw-bold">Peso Meta: <span th:text="${usuarioComunidad.metaAlcanzarPeso}+' kg'"></span></p>
+                        <p class="card-text fw-bold">Nivel de Actividad Fisica: <span th:text="${usuarioComunidad.nivelDeActividad}"></span></p>
+                        <div class="row d-flex align-items-center">
+                            <div class="col-2">
+                                <form th:action="@{/dejarDeSeguir}" method="post" th:object="${usuarioComunidad}" th:if="${follow != null}">
+                                    <input type="hidden" name="usuarioId" th:value="${usuarioComunidad.id}" />
+                                    <button type="submit" class="btn btn-warning" >Siguiendo</button>
+                                </form> 
+                                <form th:action="@{/seguir}" method="post" th:object="${usuarioComunidad}" th:if="${follow == null}">
+                                    <input type="hidden" name="usuarioId" th:value="${usuarioComunidad.id}" />
+                                    <button type="submit" class="btn btn-success" >Seguir</button>
+                                </form>                                
+                            </div>
+                            <div class="col-10">
+                                <a class="btn btn-dark" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                                  
+                            </div>         
+                        </div>
                     </div>
                 </div>
             </div>
@@ -70,6 +79,8 @@
     </div>
 
     <div th:replace="footer :: footer"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
