--- a/src/main/webapp/WEB-INF/views/thymeleaf/subirPublicacion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/subirPublicacion.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subir Publicación</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,15 +19,32 @@
 </head>
 <body>
 
-    <!--header/nav-->
     <div th:replace="navbar :: navbar"></div>
 
-    <div class="container my-5" style="min-height: 60vh;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="list-group flex-row">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action activo">COMUNIDAD</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="ms-2 p-2">
+        <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > <a th:href="@{/comunidad}" style="color: #5FB92E">Comunidad</a> > Subir Publicacion</h6>
+    </div>
+
+    <div class="container my-5" style="min-height: 60vh;">
         <h2 class="text-center fw-bold mb-4">Nueva Publicacion</h2>
-        
         <div class="row d-flex flex-column justify-content-center align-items-center">
-            <div class="col-md-6 border border-2 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+            <div class="col-md-6 border border-1 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
                 <form class="p-5" th:action="@{/guardarPublicacion}" method="POST" enctype="multipart/form-data" th:object="${publicacion}">
                     <div class="form-floating mb-3">
                         <input class="form-control" type="text" name="texto" id="texto" placeholder="Ingresar Texto" required>
@@ -38,20 +55,15 @@
                         <input class="form-control form-contrl-sm" type="file" name="imagen" id="imagen">
                     </div>   
                     <div class="row mb-3">
-                        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
-                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                <input class="btn btn-success" type="submit" name="subir" id="subir" value="Subir Publicacion">
-                            </div>
+                        <div class="col-md-6 d-flex justify-content-center">
+                            <input class="btn btn-success" type="submit" name="subir" id="subir" value="Subir Publicacion">
                         </div>
-                        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
-                            <div class="d-flex flex-column justify-content-center align-items-center">
-                                <a class="btn btn-warning" th:href="@{/comunidad}">Cancelar</a>
-                            </div>
+                        <div class="col-md-6 d-flex justify-content-center">
+                            <a class="btn btn-warning" th:href="@{/comunidad}">Cancelar</a>
                         </div>
                     </div>
 
-                    <!--errores-->
-                    <div class="d-flex flex-column justify-content-center">
+                    <div class="d-flex justify-content-center">
                         <div class="alert alert-danger alert-dismissible fade show" th:if="${error != null}">
                             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                             <strong>Error: </strong><span th:text="${error}"></span>
@@ -61,11 +73,11 @@
                 </form>
             </div>
         </div>
-
     </div>
 
-    <!--footer-->
     <div th:replace="footer :: footer"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
