update btn ver publicaciones

--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
@@ -69,7 +69,7 @@
                                 </form>                                
                             </div>
                             <div class="col-10">
-                                <a class="btn btn-dark" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                                  
+                                <a class="btn btn-success" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                                  
                             </div>         
                         </div>
                     </div>
