api mercado pago

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -15,7 +15,11 @@
     <div class="container">
         <div id="notificaciones"></div>
     </div>
-
+<div class="row justify-content-center mt-4">
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <a th:href="@{/premium}" class="btn btn-warning btn-lg">Ser Premium</a>
+            </div>
+        </div>
     <div class="bodyContainer">
         <div class="container">
             <h2 class="section-title">Opciones del Menú</h2>
