--- a/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
@@ -40,22 +40,39 @@
                 <span><a th:href="@{/calendarioDieta}" style="color: green;">Calendario</a></span> > Mis alimentos
             </p>
         </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-              <h2>Alimentos consumidos el <span th:text="${fecha}"></span></h2>
-                <ul>
-                    <li th:each="colacion : ${colaciones}">
-                        <a><span th:text="${colacion.alimentos.nombre}"></span> </a> - <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -<span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
 
-                    </li>
-                </ul>
+        <div th:if="${mensajeAlimentoModificado}" class="alert alert-success" role="alert">
+            <p th:text="${mensajeAlimentoModificado}"></p>
+        </div>
+        <div th:if="${mensajeAlimentoAgregado}" class="alert alert-success" role="alert">
+            <p th:text="${mensajeAlimentoAgregado}"></p>
+        </div>
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h2>Alimentos consumidos el <span th:text="${fecha}"></span></h2>
+                    <ul>
+                        <li th:each="colacion : ${colaciones}">
+                            <a th:href="@{/alimentos/{id}(id=${colacion.alimentos.id}, from='misAlimentos')}">
+                                <span th:text="${colacion.alimentos.nombre}"></span> </a> -
+                            <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -
+                            <span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
+                            <a th:href="@{/misAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${colacion.alimentos.id},tipoColacion=${colacion.tipo},fecha=${fecha})}" class="btn btn-danger eliminarAlimento" onclick="confirmDelete('${colacion.alimentos.id}', '${colacion.tipo}', '${fecha}')">x</a>                        </li>
+                    </ul>
+                </div>
+            </div>
             </div>
         </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script>
+        function confirmDelete(idAlimento, tipoColacion, fecha) {
+            if (confirm('Estas seguro de querer eliminar el alimento??')) {
+                window.location.href = '/misAlimentos/eliminarAlimento/' + idAlimento + '/' + tipoColacion + '/' + fecha;
+            }
+        }
+    </script>
 </body>
 </html>
