--- a/src/main/webapp/WEB-INF/views/thymeleaf/premium.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/premium.html
@@ -2,61 +2,55 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rutina de ejercicios</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!--google-fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <button id="checkout-button" onclick="MP()">Comprar</button>
-    <div id="button-container"></div>
-    <script>
-        const mercadopago = new MercadoPago('TEST-2f2a2c69-f2b2-4d6b-813a-724e79d499db', {
-            locale: 'es-AR'
-        });
+<div th:replace="navbar :: navbar"></div>
 
-        const MP = async () => {
-            try {
-                const miArticulo = {
-                    title: "membresia",
-                    quantity: 1,
-                    unit_price: 1000
-                };
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="list-group flex-row">
+                <a th:href="@{/home}" class="list-group-item list-group-item-action">MI FATLOSS</a>
+                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
+                <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
+            </div>
+        </div>
+    </div>
+</div>
 
-                const response = await fetch('api/mp', {
-                    method: "POST",
-                    headers: {
-                        'Accept': 'application/json',
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(miArticulo)
-                });
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <div class="alert alert-success" role="alert">
+                ¡Pago realizado con éxito! Ahora puedes acceder al contenido premium.
+            </div>
+            <a th:href="@{/contenidoPremium}" class="btn btn-primary">Ver contenido premium</a>
+        </div>
+    </div>
+</div>
 
-                const preference = await response.text();
-                createCheckoutButton(preference);
-                console.log(preference);
-            } catch (e) {
-                alert(e);
-            }
-        }
+<div th:replace="footer :: footer"></div>
 
-        // Handle call to backend and generate preference.
-        const createCheckoutButton = (preferenceId) => {
-            const bricksBuilder = mercadopago.bricks();
-            const generateButton = async () => {
-                if (window.checkoutButton) window.checkoutButton.unmount();
-                window.checkoutButton = await bricksBuilder.create(
-                    'wallet',
-                    'button-container', // class/id where the payment button will be displayed
-                    {
-                        initialization: {
-                            preferenceId: preferenceId,
-                        },
-                    }
-                );
-            };
-            generateButton();
-        };
-
-
-    </script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
