Implementacion de Desafios

--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-10">
                                 <a class="btn btn-success" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>
-                                <a class="btn btn-success" th:href="@{/desafiosUsuarios/{id}(id=${usuario.id})}">Ver Desafios</a>
+                                <a class="btn btn-success" th:href="@{/desafiosUsuarios/{id}(id=${usuarioComunidad.id})}">Ver Desafios</a>
                             </div>         
                         </div>
                     </div>
