arreglo acceso premium

--- a/src/main/webapp/WEB-INF/views/thymeleaf/accesoDenegado.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/accesoDenegado.html
@@ -196,7 +196,7 @@
         </div>
     </div>
     <div class="overlay">
-        <p>Para acceder a nuestra rutina de jercicios debes de adquirir una miembresia premium.</p>
+        <p>Para acceder a nuestra rutina de ejercicios debes de adquirir una miembresia premium.</p>
         <button id="checkout-button" onclick="MP()">Comprar</button>
         <div id="button-container"></div>
     </div>
